# Webchat

./: CMakeLists.txt
home/: index.html
platinum/: log.cc  log.h  mutex.cc  mutex.h  nocopyable.h  singleton.h  thread.cc  thread.h  threadpool.cc  threadpool.h  util.cc  util.h  webserver.cc  webserver.h
src/: main.cc  webchat.cc  webchat.h
